--- a/HTML Tasks/style.css
+++ b/HTML Tasks/style.css
@@ -38,3 +38,17 @@ td:nth-child(even) {
 body {
   background-color: aquamarine;
 }
+
+footer {
+  position: fixed;
+  width: 100%;
+  text-align: center;
+  bottom: 5%;
+}
+
+button {
+  padding: 20px 30px;
+  background-color: greenyellow;
+  font-weight: bold;
+  font-size: 20px;
+}
