--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 }
 
 table {
+  text-align: center;
   border: 1px solid black;
   background-color: rgb(212, 135, 245);
   width: 400px;
-  height: 100px;
+  height: 200px;
 }
 
 th,
